--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
         <![endif]-->
     </head>
     <body>
-        <h1>Hello Coursera</h1>
+        <h1>Hello Coursera, Is it a great course?</h1>
         <script src=""></script>
     </body>
 </html>
